--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "parcel index.html",
+    "start": "parcel serve index.html",
     "build": "parcel build index.html"
   },
+  "ts-standard": {
+    "project": "./tsconfig.json"
+  },
   "devDependencies": {
+    "@parcel/transformer-html": "^2.0.0-alpha.3",
+    "@parcel/transformer-posthtml": "^2.0.0-alpha.3",
     "@types/node": "^14.14.21",
     "@types/parcel-env": "^0.0.0",
     "@types/react": "^17.0.0",
@@ -15,13 +20,18 @@
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.0.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "parcel-bundler": "^1.12.4",
-    "standard": "^16.0.3",
+    "parcel": "^2.0.0-beta.1",
+    "postcss-modules": "^4.0.0",
+    "ts-standard": "^10.0.0",
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "@tailwindcss/postcss7-compat": "^2.0.2",
+    "autoprefixer": "^9",
     "eslint": "^7.0.0",
+    "postcss": "^7",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
 }
