--- a/.parcelrc
+++ b/.parcelrc
@@ -1,5 +1,10 @@
 {
+  "extends": [
+    "@parcel/config-default"
+  ],
   "transformers": {
-    "*.svg": ["@parcel/transformer-svg-react"],
+    "*.svg": [
+      "@parcel/transformer-svg-react"
+    ],
   },
 }
