--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-typescript-parcel-starter",
+  "name": "wfhu-frontend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.html",
   "license": "MIT",
   "scripts": {
     "start": "parcel serve index.html",
@@ -12,7 +12,6 @@
   },
   "devDependencies": {
     "@parcel/transformer-html": "^2.0.0-alpha.3",
-    "@parcel/transformer-posthtml": "^2.0.0-alpha.3",
     "@parcel/transformer-svg-react": "^2.0.0-nightly.1739",
     "@types/node": "^14.14.21",
     "@types/parcel-env": "^0.0.0",
@@ -20,19 +19,18 @@
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.0.0",
+    "autoprefixer": "^10.2.3",
+    "eslint": "^7.0.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "parcel": "^2.0.0-beta.1",
-    "postcss-modules": "^4.0.0",
+    "postcss": "^8.2.4",
+    "tailwindcss": "^2.0.2",
     "ts-standard": "^10.0.0",
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "@tailwindcss/postcss7-compat": "^2.0.2",
-    "autoprefixer": "^9",
-    "eslint": "^7.0.0",
-    "postcss": "^7",
+    "highlight.js": "^10.5.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+    "react-dom": "^17.0.1"
   }
 }
