--- a/package.json
+++ b/package.json
@@ -19,18 +19,19 @@
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.0.0",
-    "autoprefixer": "^10.2.3",
     "eslint": "^7.0.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "parcel": "^2.0.0-beta.1",
-    "postcss": "^8.2.4",
-    "tailwindcss": "^2.0.2",
     "ts-standard": "^10.0.0",
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "autoprefixer": "^9.0.0",
     "highlight.js": "^10.5.0",
+    "postcss": "^8.2.4",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
+    "tailwindcss": "^2.0.2"
   }
 }
