--- a/package.json
+++ b/package.json
@@ -26,12 +26,22 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.7",
+    "apollo-boost": "^0.4.9",
     "autoprefixer": "^9.0.0",
+    "graphql": "^15.4.0",
     "highlight.js": "^10.5.0",
+    "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "postcss": "^8.2.4",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-apollo": "^3.1.5",
     "react-dom": "^17.0.1",
+    "react-markdown": "^5.0.3",
+    "react-moment": "^1.1.1",
     "react-router-dom": "^5.2.0",
+    "reactstrap": "^8.9.0",
     "tailwindcss": "^2.0.2"
   }
 }
