--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@apollo/client": "^3.3.7",
     "apollo-boost": "^0.4.9",
     "autoprefixer": "^9.0.0",
+    "babel-runtime": "^6.26.0",
     "graphql": "^15.4.0",
     "highlight.js": "^10.5.0",
     "lodash": "^4.17.20",
@@ -38,9 +39,11 @@
     "react": "^17.0.1",
     "react-apollo": "^3.1.5",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-markdown": "^5.0.3",
     "react-moment": "^1.1.1",
     "react-router-dom": "^5.2.0",
+    "react-script-tag": "^1.1.2",
     "reactstrap": "^8.9.0",
     "tailwindcss": "^2.0.2"
   }
