--- a/package.json
+++ b/package.json
@@ -27,16 +27,18 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.7",
+    "@tailwindcss/postcss7-compat": "^2.0.2",
     "apollo-boost": "^0.4.9",
-    "autoprefixer": "^9.0.0",
+    "autoprefixer": "^9.8.6",
     "babel-runtime": "^6.26.0",
+    "csstype": "^3.0.6",
     "graphql": "^15.4.0",
     "highlight.js": "^10.5.0",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
-    "postcss": "^8.2.4",
+    "postcss": "^7.0.35",
     "prop-types": "^15.7.2",
-    "react": "^17.0.1",
+    "react": "^16.8.0",
     "react-apollo": "^3.1.5",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
@@ -45,6 +47,6 @@
     "react-router-dom": "^5.2.0",
     "react-script-tag": "^1.1.2",
     "reactstrap": "^8.9.0",
-    "tailwindcss": "^2.0.2"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2"
   }
 }
