Update env vars REACT_APP_SERVER_URL, REACT_APP_BACKEND_URL

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-REACT_APP_SERVER_URL=https://wfhuniv.studiotenfour.biz
-REACT_APP_BACKEND_URL=http://wfhuniv-api-prod.studiotenfour.biz
+REACT_APP_SERVER_URL=https://wfhu-frontend.studiotenfour.biz
+REACT_APP_BACKEND_URL=http://wfhu-backend-prod.studiotenfour.biz
