--- a/.env.staging
+++ b/.env.staging
@@ -1,2 +1,2 @@
-REACT_APP_SERVER_URL=https://staging-wfhuniv.studiotenfour.biz
-REACT_APP_BACKEND_URL=http://wfhuniv-api-staging.studiotenfour.biz
+REACT_APP_SERVER_URL=https://wfhu-frontend-staging.studiotenfour.biz
+REACT_APP_BACKEND_URL=http://wfhu-backend-staging.studiotenfour.biz
