--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-REACT_APP_SERVER_URL=https://wfhu-frontend.studiotenfour.biz
+REACT_APP_SERVER_URL=https://wfhu-frontend-prod.studiotenfour.biz
 REACT_APP_BACKEND_URL=https://wfhu-backend-prod.studiotenfour.biz
