--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base    = "/"
   publish = "/build"
-  command = "parcel index.html"
+  command = "yarn build"
 
 [context.production]
   command = "yarn build"
