--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel serve index.html",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html",
+    "build:staging": "parcel build index.html"
   },
   "ts-standard": {
     "project": "./tsconfig.json"
