--- a/package.json
+++ b/package.json
@@ -48,5 +48,9 @@
     "react-script-tag": "^1.1.2",
     "reactstrap": "^8.9.0",
     "tailwindcss": "^2.0.2"
-  }
+  },
+  "engines": {
+    "node": ">= 14.15.4",
+    "npm": ">= 6.14.10"
+  },
 }
