--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "main": "index.html",
   "license": "MIT",
   "scripts": {
-    "start": "parcel serve index.html",
-    "build": "parcel build index.html",
-    "build:staging": "parcel build index.html"
+    "start": "parcel index.html",
+    "build": "parcel build index.html --no-cache"
   },
   "ts-standard": {
     "project": "./tsconfig.json"
