--- a/netlify.toml
+++ b/netlify.toml
@@ -17,5 +17,5 @@
   command = "yarn build"
   [context.staging.environment]
     REACT_APP_SERVER_URL = "https://wfhu-frontend-staging.studiotenfour.biz"
-    REACT_APP_API_URL = "https://wfhu-backend-staging.studiotenfour.biz"
+    REACT_APP_API_URL = "https://wfhu-backend-prod.studiotenfour.biz"
 
