--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^7.0.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "parcel": "^2.0.0-beta.1",
+    "parcel-bundler": "^1.12.4",
     "ts-standard": "^10.0.0",
     "typescript": "^4.1.3"
   },
