--- a/.parcelrc
+++ b/.parcelrc
@@ -1,10 +1,8 @@
 {
-  "extends": [
-    "@parcel/config-default"
-  ],
-  "transformers": {
-    "*.svg": [
-      "@parcel/transformer-svg-react"
+    "extends": [
+        "@parcel/config-default"
     ],
-  },
+    "transformers": {
+        "*.{jpg,png,svg}": ["@parcel/transformer-raw"]
+    },
 }
