--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html --no-cache"
+    "build": "parcel build index.html --no-cache -d dist"
   },
   "ts-standard": {
     "project": "./tsconfig.json"
@@ -23,6 +23,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "parcel": "^2.0.0-beta.1",
     "parcel-bundler": "^1.12.4",
+    "parcel-plugin-nuke-dist": "^1.0.1",
     "ts-standard": "^10.0.0",
     "typescript": "^4.1.3"
   },
@@ -30,15 +31,16 @@
     "@apollo/client": "^3.3.7",
     "@parcel/transformer-raw": "^2.0.0-alpha.3",
     "@parcel/transformer-typescript-tsc": "^2.0.0-alpha.3",
+    "@tailwindcss/postcss7-compat": "^2.0.2",
     "apollo-boost": "^0.4.9",
-    "autoprefixer": "^10.2.4",
+    "autoprefixer": "^9.8.6",
     "babel-runtime": "^6.26.0",
     "csstype": "^3.0.6",
     "graphql": "^15.4.0",
     "highlight.js": "^10.5.0",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
-    "postcss": "^8.2.4",
+    "postcss": "^7.0.35",
     "prop-types": "^15.7.2",
     "react": "^16.8.0",
     "react-apollo": "^3.1.5",
@@ -49,6 +51,6 @@
     "react-router-dom": "^5.2.0",
     "react-script-tag": "^1.1.2",
     "reactstrap": "^8.9.0",
-    "tailwindcss": "^2.0.2"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2"
   }
 }
