--- a/package.json
+++ b/package.json
@@ -33,14 +33,14 @@
     "@parcel/transformer-typescript-tsc": "^2.0.0-alpha.3",
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "apollo-boost": "^0.4.9",
-    "autoprefixer": "^9.8.6",
+    "autoprefixer": "^9",
     "babel-runtime": "^6.26.0",
     "csstype": "^3.0.6",
     "graphql": "^15.4.0",
     "highlight.js": "^10.5.0",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
-    "postcss": "^7.0.35",
+    "postcss": "^7",
     "prop-types": "^15.7.2",
     "react": "^16.8.0",
     "react-apollo": "^3.1.5",
@@ -51,6 +51,6 @@
     "react-router-dom": "^5.2.0",
     "react-script-tag": "^1.1.2",
     "reactstrap": "^8.9.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
 }
