--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.html",
   "license": "MIT",
   "scripts": {
-    "start": "parcel index.html --public-url ./",
-    "build": "parcel build index.html --no-cache -d dist --public-url ./"
+    "start": "parcel index.html",
+    "build": "parcel build index.html --no-cache -d dist"
   },
   "ts-standard": {
     "project": "./tsconfig.json"
