--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html --no-cache -d dist"
+    "build": "parcel build index.html -d ./dist --public-url ./"
   },
   "ts-standard": {
     "project": "./tsconfig.json"
