--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "csstype": "^3.0.6",
     "graphql": "^15.4.0",
     "highlight.js": "^10.5.0",
+    "jquery": "^3.5.1",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "postcss": "^7.0.35",
