--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "postcss": "^7.0.35",
+    "postcss-loader": "^5.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.0",
     "react-apollo": "^3.1.5",
