--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "apollo-boost": "^0.4.9",
     "autoprefixer": "^9.8.6",
     "babel-runtime": "^6.26.0",
+    "bootstrap": "^4.6.0",
     "csstype": "^3.0.6",
     "graphql": "^15.4.0",
     "highlight.js": "^10.5.0",
@@ -48,6 +49,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.0",
     "react-apollo": "^3.1.5",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-markdown": "^5.0.3",
