--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "main": "index.html",
   "license": "MIT",
   "scripts": {
-    "start": "parcel index.html",
-    "build": "parcel build index.html -d ./dist --public-url ./"
+    "start": "yarn generate:fragments && yarn run:dev",
+    "run:dev": "parcel index.html",
+    "build": "yarn generate:fragments && yarn run:build",
+    "run:build": "parcel build index.html -d ./dist --public-url ./",
+    "generate:fragments": "node src/utils/schemaQuery.js"
+
   },
   "ts-standard": {
     "project": "./tsconfig.json"
@@ -13,6 +17,9 @@
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.15.2",
     "@fullhuman/postcss-purgecss": "3.0",
+    "@graphql-codegen/cli": "^1.20.1",
+
+    "@graphql-codegen/fragment-matcher": "^2.0.1",
     "@parcel/transformer-html": "^2.0.0-alpha.3",
     "@parcel/transformer-svg-react": "^2.0.0-nightly.1739",
     "@types/node": "^14.14.21",
