--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "run:dev": "parcel index.html",
     "build": "yarn generate:fragments && yarn run:build",
     "run:build": "parcel build index.html -d ./dist --public-url ./",
-    "generate:fragments": "node src/utils/schemaQuery.js"
-
+    "generate:fragments": "node -r dotenv/config src/utils/schemaQuery.js"
   },
   "ts-standard": {
     "project": "./tsconfig.json"
@@ -18,7 +17,6 @@
     "@fortawesome/fontawesome-free": "^5.15.2",
     "@fullhuman/postcss-purgecss": "3.0",
     "@graphql-codegen/cli": "^1.20.1",
-
     "@graphql-codegen/fragment-matcher": "^2.0.1",
     "@parcel/transformer-html": "^2.0.0-alpha.3",
     "@parcel/transformer-svg-react": "^2.0.0-nightly.1739",
@@ -46,6 +44,7 @@
     "babel-runtime": "^6.26.0",
     "bootstrap": "^4.6.0",
     "csstype": "^3.0.6",
+    "dotenv": "^8.2.0",
     "graphql": "^15.4.0",
     "highlight.js": "^10.5.0",
     "jquery": "^3.5.1",
