--- a/netlify.toml
+++ b/netlify.toml
@@ -15,7 +15,7 @@
 [context.branch-deploy]
   publish = "/dist"
   command = "yarn build"
-  [context.deploy-preview.environment]
+  [context.branch-deploy.environment]
     REACT_APP_API_URL = "https://wfhu-backend-staging.studiotenfour.biz"
     NODE_VERSION = "14.15.4"
     NPM_VERSION = "6.14.10"
