--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "parcel": "^2.0.0-beta.1",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-nuke-dist": "^1.0.1",
+    "sass": "^1.32.7",
     "ts-standard": "^10.0.0",
     "typescript": "^4.1.3"
   },
@@ -64,6 +65,7 @@
     "react-router-dom": "^5.2.0",
     "react-script-tag": "^1.1.2",
     "reactstrap": "^8.9.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
+    "variables": "^1.0.1"
   }
 }
