Attempt to fix build js paths on netlify

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "license": "MIT",
   "scripts": {
     "start": "yarn generate:fragments && yarn run:dev && yarn redirects:copy",
-    "run:dev": "parcel index.html",
+    "run:dev": "parcel ./index.html",
     "build": "yarn generate:fragments && yarn run:build && yarn redirects:copy",
-    "run:build": "parcel build index.html -d ./dist --public-url ./",
+    "run:build": "parcel build ./index.html -d ./dist --public-url ./",
     "redirects:copy": "cp ./_redirects ./dist/",
     "generate:fragments": "node -r dotenv/config src/utils/schemaQuery.js"
   },
