--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "license": "MIT",
   "scripts": {
     "start": "yarn generate:fragments && yarn run:dev && yarn redirects:copy",
-    "run:dev": "parcel ./index.html",
+    "run:dev": "parcel src/index.html",
     "build": "yarn generate:fragments && yarn run:build && yarn redirects:copy",
-    "run:build": "parcel build ./index.html -d ./dist --public-url ./",
+    "run:build": "parcel build src/index.html -d ./dist --public-url ./",
     "redirects:copy": "cp ./_redirects ./dist/",
-    "generate:fragments": "node -r dotenv/config src/utils/schemaQuery.js"
+    "generate:fragments": "node -r dotenv/config src/utils/schemaQuery.tsx"
   },
   "ts-standard": {
     "project": "./tsconfig.json"
