--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "wfhu-frontend",
   "version": "1.0.0",
-  "main": "index.html",
+  "main": "src/index.html",
   "license": "MIT",
   "scripts": {
     "start": "yarn generate:fragments && yarn run:dev && yarn redirects:copy",
     "run:dev": "parcel src/index.html",
     "build": "yarn generate:fragments && yarn run:build && yarn redirects:copy",
-    "run:build": "parcel build src/index.html -d ./dist --public-url ./",
+    "run:build": "parcel build src/index.html -d ./dist --public-url .",
     "redirects:copy": "cp ./_redirects ./dist/",
     "generate:fragments": "node -r dotenv/config src/utils/schemaQuery.tsx"
   },
