Attempt to fix build js paths on netlify

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "yarn generate:fragments && yarn run:dev && yarn redirects:copy",
     "run:dev": "parcel src/index.html",
     "build": "yarn generate:fragments && yarn run:build && yarn redirects:copy",
-    "run:build": "parcel build src/index.html -d ./dist --public-url .",
+    "run:build": "parcel build src/index.html -d ./dist --public-url ./",
     "redirects:copy": "cp ./_redirects ./dist/",
     "generate:fragments": "node -r dotenv/config src/utils/schemaQuery.tsx"
   },
