--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,10 @@
 [build]
-  publish = "./dist"
+  publish = "dist/"
+  base = "dist/"
   command = "yarn build"
 
 [context.production]
-  publish = "./dist"
+  publish = "dist/"
   command = "yarn build"
   [context.production.environment]
     REACT_APP_SERVER_URL = "https://wfhu-frontend-prod.studiotenfour.biz"
@@ -13,7 +14,7 @@
   REACT_APP_API_URL = "https://wfhu-backend-staging.studiotenfour.biz"
 
 [context.branch-deploy]
-  publish = "./dist"
+  publish = "dist/"
   command = "yarn build"
   [context.branch-deploy.environment]
     REACT_APP_API_URL = "https://wfhu-backend-staging.studiotenfour.biz"
