--- a/.env.staging
+++ b/.env.staging
@@ -1,2 +1,2 @@
 REACT_APP_SERVER_URL=https://wfhu-frontend-staging.studiotenfour.biz
-REACT_APP_BACKEND_URL=https://wfhu-backend-staging.studiotenfour.biz
+REACT_APP_API_URL=https://wfhu-backend-staging.studiotenfour.biz
