--- a/netlify.toml
+++ b/netlify.toml
@@ -7,8 +7,8 @@
   publish = "dist/"
   command = "yarn build"
   [context.production.environment]
-    REACT_APP_SERVER_URL = "https://wfhu-frontend-prod.studiotenfour.biz"
-    REACT_APP_API_URL = "https://wfhu-backend-prod.studiotenfour.biz"
+    REACT_APP_SERVER_URL = "https://www.wfhuniv.com"
+    REACT_APP_API_URL = "https://api.wfhuniv.com"
 
 [context.deploy-preview.environment]
   REACT_APP_API_URL = "https://wfhu-backend-staging.studiotenfour.biz"
