Revert site  urls to staging  domains & Run build

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-REACT_APP_SERVER_URL=https://www.wfhuniv.com
-REACT_APP_API_URL=https://api.wfhuniv.com
+REACT_APP_SERVER_URL=https://wfhu-frontend-prod.studiotenfour.biz
+REACT_APP_API_URL=https://wfhu-backend-prod.studiotenfour.biz
