--- a/netlify.toml
+++ b/netlify.toml
@@ -8,7 +8,7 @@
   command = "yarn build"
   [context.production.environment]
     REACT_APP_SERVER_URL = "https://wfhu-frontend-prod.studiotenfour.biz"
-    REACT_APP_API_URL = "https://wfhu-backend-prod.studiotenfour.biz"
+    REACT_APP_API_URL = "https://wfhu-api.studiotenfour.biz"
 
 [context.deploy-preview.environment]
   REACT_APP_API_URL = "https://wfhu-backend-staging.studiotenfour.biz"
